Fix flickering on page loads (#30)
* [wip] get release build...


* swap font awesome and poppins font (async load)


* disable scroll spy


* disable clickable alerts


* disable search


* change async load


* disable all head-end hooks


* dont swap fa fonts


* patch docsy mermaid integration to not reload


* restore other functionalities


* remove preload of font (FOUT not working)


---------

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -46,6 +46,7 @@ $landing-gray-800: #1f2937; // dark gray for button hovers
 // typography
 $google_font_name: 'Poppins';
 $google_font_display: 'swap';
+$td-enable-google-fonts: true;
 $font-family-sans-serif:
   'Poppins',
   -apple-system,
@@ -58,3 +59,7 @@ $font-family-sans-serif:
   'Apple Color Emoji',
   'Segoe UI Emoji',
   'Segoe UI Symbol';
+
+// override FontAwesome's default 'block' font-display to prevent icon flickering
+// 'swap' allows fallback rendering immediately while fonts load
+$fa-font-display: swap;
